Fixed drop-down styling to avoid wrapping
Now that the message keys are showing in the demo we can see how bad things look if the drop-down label is too big and wraps

--- a/modules/ve2/ui/styles/ve.ui.Toolbar.css
+++ b/modules/ve2/ui/styles/ve.ui.Toolbar.css
@@ -114,6 +114,8 @@
 	background-color: white;
 }
 .es-toolbarDropdownTool-label {
+	overflow: hidden;
+	height: 2em;
 	padding: 0.25em;
 	font-size: 0.8em;
 	line-height: 24px;
